fix: improve color contrasts

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -3,16 +3,16 @@ $color-text: rgb(20 20 20);
 $color-bg: rgb(252 252 252);
 $color-white: rgb(255 255 255);
 
-$color-primary: rgb(54 133 191);
+$color-primary: rgb(50 122 175);
 
-$color-danger: rgb(207 45 86 / 80%);
-$color-success: rgb(31 138 101);
+$color-danger: rgb(196 40 80);
+$color-success: rgb(30 132 96);
 
-$color-torrent-paused: rgb(192 133 50);
-$color-torrent-disabled: rgb(20 20 20 / 54%);
+$color-torrent-paused: rgb(164 113 43);
+$color-torrent-disabled: rgb(20 20 20 / 62%);
 
 $color-text-disabled: rgb(20 20 20 / 36%);
-$color-text-secondary: rgb(20 20 20 / 54%);
+$color-text-secondary: rgb(20 20 20 / 62%);
 $color-text-muted: rgb(20 20 20 / 74%);
 
 $color-surface-6: rgb(20 20 20 / 6%);
